# zeroclaw

./: .gitignore  API_DEPLOYMENT_REPORT.md  API_VERIFICATION.md  Cargo.toml  PROJECT_STRUCTURE.md  api_report.sh  test_api.sh  verify_api_static.sh
docs/plans/: 2026-02-17-esp32-ui-slint-design.md  2026-02-17-zeroclaw-esp32-slint-ui-design.md  2026-02-21-ui-development-implementation-plan.md
firmware/zeroclaw-esp32-ui/: Cargo.toml
firmware/zeroclaw-esp32-ui/src/: client.rs  main.rs  pins.rs  protocol.rs  touch.rs  wifi.rs
firmware/zeroclaw-esp32-ui/ui/: main.slint
src/: main.rs
src/daemon/: mod.rs
src/gateway/: mod.rs
src/swagger-ui/: index.html
zeroclaw-ui-demo/: Cargo.toml  ui.slint
zeroclaw-ui-demo/src/: main.rs
