[package]
name = "zeroclaw-ui-demo"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "zeroclaw-ui-demo"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.10"

[dependencies]
slint = "1.10"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
